<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/act_login_title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_title"
        android:layout_marginTop="@dimen/padding_title"
        android:text="@string/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/act_login_sub_title"
        style="@style/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:text="@string/login_sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/act_login_instagram"
        style="@style/social"
        android:layout_marginStart="@dimen/padding_title"
        android:contentDescription="@string/social_instagram"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_login_title"
        app:srcCompat="@drawable/social_instagram" />

    <ImageButton
        android:id="@+id/act_login_facebook"
        style="@style/social"
        android:layout_marginStart="@dimen/half_padding_title"
        android:contentDescription="@string/social_facebook"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintStart_toEndOf="@+id/act_login_instagram"
        app:layout_constraintTop_toBottomOf="@+id/act_login_title"
        app:srcCompat="@drawable/social_facebook" />

    <ImageButton
        android:id="@+id/act_login_linkedin"
        style="@style/social"
        android:layout_marginStart="@dimen/half_padding_title"
        android:layout_marginTop="@dimen/margin_top"
        android:contentDescription="@string/social_linkedin"
        app:layout_constraintStart_toEndOf="@+id/act_login_facebook"
        app:layout_constraintTop_toBottomOf="@+id/act_login_title"
        app:srcCompat="@drawable/social_linkedin" />

    <ImageButton
        android:id="@+id/act_login_twitter"
        style="@style/social"
        android:layout_marginStart="@dimen/padding_title"
        android:layout_marginTop="@dimen/half_padding_title"
        android:contentDescription="@string/social_twitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_login_instagram"
        app:srcCompat="@drawable/social_twitter" />

    <ImageButton
        android:id="@+id/act_login_snapchat"
        style="@style/social"
        android:layout_marginStart="@dimen/half_padding_title"
        android:layout_marginTop="@dimen/half_padding_title"
        android:contentDescription="@string/social_snapchat"
        app:layout_constraintStart_toEndOf="@id/act_login_twitter"
        app:layout_constraintTop_toBottomOf="@+id/act_login_instagram"
        app:srcCompat="@drawable/social_snapchat" />

    <ImageButton
        android:id="@+id/act_login_twitch"
        style="@style/social"
        android:layout_marginStart="@dimen/half_padding_title"
        android:layout_marginTop="@dimen/half_padding_title"
        android:contentDescription="@string/social_twitch"
        app:layout_constraintStart_toEndOf="@id/act_login_snapchat"
        app:layout_constraintTop_toBottomOf="@+id/act_login_instagram"
        app:srcCompat="@drawable/social_twitch" />

    <ImageButton
        android:id="@+id/act_login_tiktok"
        style="@style/social"
        android:layout_marginStart="@dimen/padding_title"
        android:layout_marginTop="@dimen/half_padding_title"
        android:contentDescription="@string/social_tiktok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_login_twitter"
        app:srcCompat="@drawable/social_tiktok" />

    <ImageButton
        android:id="@+id/act_login_tinder"
        style="@style/social"
        android:layout_marginStart="@dimen/half_padding_title"
        android:layout_marginTop="@dimen/half_padding_title"
        android:contentDescription="@string/social_tinder"
        app:layout_constraintStart_toEndOf="@id/act_login_tiktok"
        app:layout_constraintTop_toBottomOf="@+id/act_login_twitter"
        app:srcCompat="@drawable/social_tinder" />

    <ImageButton
        android:id="@+id/act_login_youtube"
        style="@style/social"
        android:layout_marginStart="@dimen/half_padding_title"
        android:layout_marginTop="@dimen/half_padding_title"
        android:contentDescription="@string/social_youtube"
        app:layout_constraintStart_toEndOf="@id/act_login_tinder"
        app:layout_constraintTop_toBottomOf="@+id/act_login_twitter"
        app:srcCompat="@drawable/social_youtube" />


</androidx.constraintlayout.widget.ConstraintLayout>