<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rect_white"
    android:padding="1dp">

    <ImageButton
        android:id="@+id/menu_profile_btn"
        style="@style/Btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/menu_profile"
        android:src="@drawable/ic_user" />

    <ImageButton
        android:id="@+id/menu_search_btn"
        style="@style/Btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/menu_search"
        android:src="@drawable/ic_search" />

    <ImageButton
        android:id="@+id/menu_settings_btn"
        style="@style/Btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/menu_settings"
        android:src="@drawable/ic_wheel" />
</LinearLayout>